--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -53,7 +53,7 @@
 
             />
         <ImageView
-            android:id="@+id/main_img_menu"
+            android:id="@+id/main_img_myinfo"
             android:layout_width="30dp"
             android:layout_height="match_parent"
             android:background="@drawable/my"
