--- a/app/src/main/res/layout/fragment_myinfo.xml
+++ b/app/src/main/res/layout/fragment_myinfo.xml
@@ -63,19 +63,18 @@
             android:layout_marginTop="5dp"
             android:fillViewport="true">
 <LinearLayout
-    android:layout_width="0dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_weight="1"
     android:orientation="vertical">
 
             <ListView
                 android:id="@+id/listview_myinfo"
-                android:layout_below="@id/item_user_info"
                 android:layout_width="match_parent"
                 android:divider="@color/blank"
                 android:dividerHeight="@dimen/text_margin"
                 android:layout_height="wrap_content"/>
     <Button
+        android:id="@+id/btn_user_quitLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/exit"
