--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -87,6 +87,7 @@
             android:layout_width="wrap_content"
             android:width="150dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_select"
             android:text="@string/btn_hqyzm"
             />
     </LinearLayout>
@@ -114,5 +115,6 @@
         android:layout_height="wrap_content"
         android:text="@string/tx_register"
         android:enabled="false"
+        android:background="@drawable/button_select"
         android:textSize="12sp"/>
 </LinearLayout>
