--- a/app/src/main/res/layout/fragment_myinfo.xml
+++ b/app/src/main/res/layout/fragment_myinfo.xml
@@ -56,25 +56,29 @@
                 />
         </RelativeLayout>
 
-        <HorizontalScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/item_user_info"
-            android:layout_marginTop="5dp"
-            android:fillViewport="true">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
+    android:id="@+id/lineView"
+    android:layout_below="@id/item_user_info"
     android:orientation="vertical">
 
-            <ListView
-                android:id="@+id/listview_myinfo"
-                android:layout_width="match_parent"
-                android:divider="@color/blank"
-                android:dividerHeight="@dimen/text_margin"
-                android:layout_height="wrap_content"/>
-    <Button
+    <ListView
+        android:id="@+id/listview_myinfo"
+        android:layout_below="@id/item_user_info"
+        android:layout_width="match_parent"
+        android:divider="@color/blank"
+        android:dividerHeight="@dimen/text_margin"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="45dp"
+        />
+
+
+</LinearLayout>
+        <Button
         android:id="@+id/btn_user_quitLogin"
+        android:layout_below="@id/lineView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/exit"
@@ -86,8 +90,6 @@
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
         />
-</LinearLayout>
-        </HorizontalScrollView>
     </RelativeLayout>
 
 </FrameLayout>
