--- a/app/src/main/res/layout/fragment_publish.xml
+++ b/app/src/main/res/layout/fragment_publish.xml
@@ -12,21 +12,12 @@
                     android:background="@color/light_gray1"
         >
 
-        <Button
-            android:id="@+id/toolbar_left"
-            android:layout_width="@dimen/img_listitem_icon_width"
-            android:layout_height="@dimen/img_listitem_icon_height"
-            android:layout_alignParentLeft="true"
-            android:layout_centerInParent="true"
-            android:background="@drawable/back"
-            />
-
         <TextView
             android:id="@+id/toolbar_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="标题"
+            android:text="发布栏"
             android:textSize="@dimen/toolbar_tv_size"
             />
 
@@ -47,102 +38,103 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:layout_marginTop="45dp"
         >
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/margin_left"
-        android:layout_marginTop="15dp"
-        android:orientation="vertical"
-        >
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_toolbar_top"
-            android:orientation="horizontal"
-            >
-
-            <TextView
-                android:id="@+id/publish_tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin"
-                android:text="@string/publish_title"
-                android:textStyle="bold"
-                />
-
-            <EditText
-                android:id="@+id/et_title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/edit_shape"
-                android:layout_marginRight="5dp"
-                android:maxLines="1"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_top"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/margin_left"
             android:orientation="vertical"
             >
 
-            <TextView
-                android:id="@+id/publish_tv_content"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin"
-                android:text="@string/publish_content"
-                android:textStyle="bold"
-                />
-
-            <EditText
-                android:id="@+id/et_content"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_margin="@dimen/text_margin"
-                android:layout_weight="1"
-                android:background="@drawable/edit_shape"
-                android:enabled="true"
-                android:gravity="top"
-                android:hint="@string/publish_content_hint"
-                android:inputType="textMultiLine"
-                android:maxLines="8"
-                android:minLines="8"
-                />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal"
+                >
+
+                <TextView
+                    android:id="@+id/publish_tv_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="@string/publish_title"
+                    android:textStyle="bold"
+                    />
+
+                <EditText
+                    android:id="@+id/et_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:background="@drawable/edit_shape"
+                    android:maxLines="1"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:orientation="vertical"
+                >
+
+                <TextView
+                    android:id="@+id/publish_tv_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/publish_content"
+                    android:textStyle="bold"
+                    />
+
+                <EditText
+                    android:id="@+id/et_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/edit_shape"
+                    android:enabled="true"
+                    android:gravity="top"
+                    android:hint="@string/publish_content_hint"
+                    android:maxLines="8"
+                    android:minLines="8"
+                    />
+            </LinearLayout>
+            <!--添加照片-->
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/publish_fenlei"
+                    />
+
+                <Spinner
+                    android:id="@+id/spinner_main"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+                </Spinner>
+
+                <Spinner
+                    android:id="@+id/spinner_child"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2">
+                </Spinner>
+            </LinearLayout>
         </LinearLayout>
-        <!--添加照片-->
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/publish_fenlei"
-                />
-
-            <Spinner
-                android:id="@+id/spinner_main"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-            </Spinner>
-
-            <Spinner
-                android:id="@+id/spinner_child"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-            </Spinner>
-        </LinearLayout>
-    </LinearLayout>
     </ScrollView>
 </FrameLayout>
