新增首页刷新,listview适配

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,7 @@
         android:adjustViewBounds="true"
         android:contentDescription="@string/img_login_dsc"
         android:src="@drawable/login_show1"
+        android:visibility="gone"
         />
 
     <TextView
