--- a/app/src/main/res/layout/main_listview_content.xml
+++ b/app/src/main/res/layout/main_listview_content.xml
@@ -12,14 +12,22 @@
         >
         <!--android:background="@drawable/headimage_shape"-->
         <!--头像-->
-        <ImageView
+       <!-- <ImageView
             android:id="@+id/main_img_userHead"
             android:layout_width="@dimen/headimg_layout_width"
             android:layout_height="@dimen/headimg_layout_height"
             android:layout_marginLeft="5dp"
             android:src="@drawable/test_hd"
-            />
-
+            />-->
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/main_img_userHead"
+            android:layout_width="@dimen/headimg_layout_width"
+            android:layout_height="@dimen/headimg_layout_height"
+            android:src="@drawable/test_hd"
+            android:layout_marginTop="0dp"
+            app:civ_border_width="0.5dp"
+            app:civ_border_color="#4a9bec" />
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
